# audit_log/app.py
@@ -72,6 +72,10 @@ def get_fan_speed_reading(index):
     return {"message": "Not Found"}, 404
 
 
+def get_health():
+    return {"message": "Not Found"}, 200
+
+
 app = connexion.FlaskApp(__name__, specification_dir='')
 if "TARGET_ENV" not in os.environ or os.environ["TARGET_ENV"] != "test":
     CORS(app.app)
