# audit_log/openapi.yaml
@@ -78,6 +78,31 @@ paths:
         '404':
           description: Not Found
 
+  /health:
+    get:
+      summary: gets service health status
+      operationId: app.get_health
+      description: gets service health status
+      responses:
+        '200':
+          description: Successfully returned service status
+          content:
+            application/json:
+              schema:
+                type: object
+                items:
+                  $ref: '#/components/schemas/FanSpeedReading'
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '404':
+          description: Not Found
 components:
   schemas:
     TemperatureReading:
